# python-scripts

./: .gitignore  .pre-commit-config.yaml  README.md  future-scripts.md  org-file-flowchart.md  org-file.py  pyproject.toml  troubleshooting_log.md
.project/docs/: current_task.md
src/python_scripts/: __init__.py
src/python_scripts/modules/: __init__.py
src/python_scripts/modules/bitcoin_price/: __init__.py  cli.py  service.py
src/python_scripts/modules/chatbot/: __init__.py  cli.py  service.py
src/python_scripts/modules/data_cleaning/: __init__.py  cli.py  service.py
src/python_scripts/modules/desktop_automation/: __init__.py  cli.py  service.py
src/python_scripts/modules/email_sender/: __init__.py  cli.py  service.py
src/python_scripts/modules/excel_report/: __init__.py  cli.py  service.py
src/python_scripts/modules/org_file/: __init__.py  cli.py  service.py
src/python_scripts/modules/pdf_tools/: __init__.py  cli.py  service.py
src/python_scripts/modules/quotes_scraper/: __init__.py  cli.py  service.py
src/python_scripts/modules/scheduler/: __init__.py  cli.py  service.py
src/python_scripts/modules/weather_notifier/: __init__.py  cli.py  service.py
src/python_scripts/modules/web_fastapi/: __init__.py  cli.py  service.py
src/python_scripts/modules/web_flask/: __init__.py  cli.py  service.py
src/python_scripts/shared/: __init__.py  logging.py  ui.py
