[project]
name = "python-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "moltra",email = "smsmail@roadrunner.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "keyring (>=25.6.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.10"

[tool.ruff]
line-length = 100
target-version = "py312"
respect-gitignore = true
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]  # pycodestyle/pyflakes/imports/bugbear
ignore = []

[tool.ruff.format]
quote-style = "double"

